syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "gRPCClient";
option java_multiple_files = true;
option java_package = "sep3.project.protobuf";
option java_outer_classname = "UserEntityProto";

message UserEntity{
  string username = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string email = 5;
  string role = 6;
}
message RequestCreateUser{
  UserEntity user = 1;
}
message ResponseCreateUser{
  UserEntity user = 2;
}

message RequestDeleteUser{
  string username = 1;
}
message ResponseDeleteUser{
  string result = 1;
}
message ResponseUserGetAllUsers{
  repeated UserEntity users = 1;
}
message RequestUserGetByUsername{
  string username = 1;
}
message ResponseUserGetByUsername{
  UserEntity user = 1;
}
service UserService{
  rpc createUser(RequestCreateUser) returns (ResponseCreateUser);
  rpc getAllUsers(google.protobuf.Empty) returns (ResponseUserGetAllUsers);
  rpc getUserByUsername(RequestUserGetByUsername) returns (ResponseUserGetByUsername);
  rpc deleteUser(RequestDeleteUser) returns (ResponseDeleteUser);
}


